# pyaesa

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/private_repo_rules/: README.md  run_private_checks.ps1
.github/workflows/: codeql.yml  package_tests.yml  publish_pypi.yml  publish_test_pypi.yml  quality.yml
conda-forge/: README.md
conda-forge/recipe/: meta.yaml
docs/: ADDING_METHODS_checklist.md  api.rst  architecture.rst  conf.py  contributing.md  developer.rst  environment.yaml  index.rst  methodological_notes.rst  overview.md  tutorial.rst  workflow_reference.md
docs/_static/: custom.css
docs/tutorials/core/: 0_set_workspace.nblink
docs/tutorials/core_prerequisites/: 1_download_data.nblink  2_process_data.nblink  index.rst
docs/tutorials/optional/: external_asocc_lca_input_staging.nblink
docs/tutorials/optional_workflows/: custom_asocc_method_weights.nblink  disaggregate_asocc_mrio_sectors.nblink  index.rst
docs/tutorials/study_objectives/: 0_study_objectives.md  1_functional_units_and_allocation_methods.md  index.rst  phase_a_iolca_deterministic.nblink  phase_a_iolca_uncertainty.nblink  phase_b0_dynamic_cc_ar6_deterministic.nblink  phase_b0_dynamic_cc_ar6_uncertainty.nblink  phase_b1_asocc_deterministic.nblink  phase_b1_asocc_uncertainty.nblink  phase_b2_acc_deterministic.nblink  phase_b2_acc_uncertainty.nblink  phase_c_asr_deterministic.nblink  phase_c_asr_uncertainty.nblink
methodological_notes/: recommended_citations.txt
pyaesa/: ARCHITECTURE_workspace_folders.md  __init__.py
pyaesa/acc/: ARCHITECTURE_acc.md  __init__.py  deterministic_acc.py  uncertainty_acc.py
pyaesa/ar6_cc/: ARCHITECTURE_ar6_cc.md  __init__.py  deterministic_ar6_cc.py  uncertainty_ar6_cc.py
pyaesa/asocc/: ARCHITECTURE_asocc.md  __init__.py  deterministic_asocc.py  disaggregate_asocc.py  inter_method_weights.py  uncertainty_asocc.py
pyaesa/asr/: ARCHITECTURE_asr.md  __init__.py  deterministic_asr.py  uncertainty_asr.py
pyaesa/download/: ARCHITECTURE_download.md  __init__.py
pyaesa/external_inputs/: ARCHITECTURE_external_inputs.md  __init__.py  prepare_external_inputs.py  templates.py
pyaesa/io_lca/: ARCHITECTURE_io_lca.md  __init__.py  deterministic_io_lca.py  uncertainty_io_lca.py
pyaesa/process/: ARCHITECTURE_process.md  __init__.py
pyaesa/shared/: ARCHITECTURE_runtime_scope_and_signature_contracts.md  ARCHITECTURE_shared.md  __init__.py
pyaesa/workspace_initialisation/: ARCHITECTURE_workspace_initialisation.md  __init__.py  packaged_prerequisites.py  set_workspace.py  workspace.py
tests/: __init__.py
tests/allocation_equation_validation/: Allocation_Validation.ipynb  __init__.py
tests/package/: conftest.py  test_package_init.py  test_public_api_exports.py
tutorials/core_prerequisites/: 0_set_workspace.ipynb  1_download_data.ipynb  2_process_data.ipynb
tutorials/optional_workflows/: custom_asocc_method_weights.ipynb  disaggregate_asocc_mrio_sectors.ipynb  external_asocc_lca_input_staging.ipynb
tutorials/study_objectives/: 0_study_objectives.md  1_functional_units_and_allocation_methods.md
(+1152 files in other folders)
