[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "pyaesa"
version = "1.2.2"
description = "pyaesa is a Python package for absolute environmental sustainability assessment (AESA), covering data download and processing, deterministic and uncertainty assessment, and figure generation."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "GPL-3.0-only"
license-files = [ "LICENSE",]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib>=3.10,<4",
  "numpy>=1.24.4,<3",
  "pandas>=1.5,<4",
  "pyarrow>=11,<24",
  "pycountry>=22.3,<27",
  "pymrio>=0.5.1,<0.7",
  "python-calamine>=0.6,<1",
  "requests>=2.28,<3",
  "SALib>=1.4.8,<2",
  "scipy>=1.10,<2",
  "statsmodels>=0.14,<1",
  "wbgapi>=1.0.12,<2",
  "xlsxwriter>=3.2,<4",
]
[[project.authors]]
name = "Erwan Ike de Bantel"
email = "erwan.de-bantel@centralesupelec.fr"

[[project.authors]]
name = "Thibault Pirson"
email = "thibault.pirson@uclouvain.be"

[[project.authors]]
name = "Gonzalo Puig-Samper"
email = "gonzalo.puig-samper@list.lu"

[[project.authors]]
name = "Jan Marcus Hartmann"
email = "jan.hartmann@ltt.rwth-aachen.de"

[project.urls]
Homepage = "https://github.com/AESAtoolkit/pyaesa"
Repository = "https://github.com/AESAtoolkit/pyaesa"
Issues = "https://github.com/AESAtoolkit/pyaesa/issues"
Documentation = "https://pyaesa.readthedocs.io/"

[project.optional-dependencies]
docs = [
  "ipython>=9,<10",
  "myst-parser>=4,<5",
  "nbsphinx>=0.9,<1",
  "nbsphinx-link>=1.3,<2",
  "sphinx>=7,<9",
  "sphinx-rtd-theme>=3,<4",
]
quality = [
  "pyright>=1.1,<2",
  "ruff>=0.15,<0.16",
]
test = [
  "coverage[toml]>=7.10.6,<8",
  "pygments>=2.17,<3",
  "pytest>=8,<10",
  "pytest-cov>=7.0,<8",
  "colorama>=0.4.6; platform_system == 'Windows'",
]

[tool.setuptools.package-data]
pyaesa = [
  "workspace_initialisation/prerequisites/**/*.csv",
  "workspace_initialisation/prerequisites/**/*.md",
  "workspace_initialisation/prerequisites/**/*.pdf",
  "workspace_initialisation/prerequisites/**/*.svg",
  "workspace_initialisation/prerequisites/**/*.txt",
  "workspace_initialisation/prerequisites/**/*.xlsx",
  "external_inputs/examples/**/*.csv",
  "external_inputs/example_guidance/**/*.txt",
  "process/ar6/utils/io/README_model_scenario_subset.txt",
  "process/mrios/utils/raw_corrections/corrected_values/*.csv",
]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "pyaesa*",]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [ "*.ipynb",]

[tool.ruff.lint]
extend-select = [ "E501",]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
branch = true
source = [ "pyaesa",]

[tool.coverage.report]
# Package gate enforces full line+branch coverage on `pyaesa`.
fail_under = 100
show_missing = true
skip_empty = true
